--- a/app/src/main/res/layout/fragment_fuel_replenish.xml
+++ b/app/src/main/res/layout/fragment_fuel_replenish.xml
@@ -221,8 +221,7 @@
             android:textSize="@dimen/text_20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/enter_amount_input_view" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
