--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -128,6 +128,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/background" />
 
+        <TextView
+            android:id="@+id/balance_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="40dp"
+            android:background="@drawable/bg_message_counter"
+            android:fontFamily="sans-serif-medium"
+            android:paddingStart="@dimen/margin_8dp"
+            android:paddingTop="2dp"
+            android:paddingEnd="@dimen/margin_8dp"
+            android:paddingBottom="4dp"
+            android:textColor="@color/continue_color"
+            android:textSize="@dimen/text_13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/balance_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/balance_view"
+            tools:text="+200" />
+
         <View
             android:id="@+id/line1"
             android:layout_width="0dp"
