--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -23,13 +23,13 @@
         android:id="@+id/card_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="26dp"
         android:layout_marginBottom="26dp"
         android:text="@string/bank_card"
         android:textColor="@color/gray_intro_text"
         android:textSize="@dimen/text_20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/card_number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,11 +37,11 @@
         android:id="@+id/card_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_4dp"
         android:textColor="@color/gray_intro_text"
         android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="@+id/card_title"
+        app:layout_constraintEnd_toStartOf="@+id/card_icon"
         app:layout_constraintStart_toEndOf="@+id/card_title"
         app:layout_constraintTop_toTopOf="@+id/card_title"
         tools:text="**** 4567" />
@@ -50,8 +50,8 @@
         android:id="@+id/card_icon"
         android:layout_width="40dp"
         android:layout_height="28dp"
-        android:layout_marginStart="@dimen/margin_16dp"
         app:layout_constraintBottom_toBottomOf="@+id/card_title"
+        app:layout_constraintEnd_toStartOf="@+id/check_icon"
         app:layout_constraintStart_toEndOf="@+id/card_number"
         app:layout_constraintTop_toTopOf="@+id/card_title"
         tools:src="@drawable/ic_mastrcard_bg" />
@@ -60,7 +60,6 @@
         android:id="@+id/check_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_8dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/card_icon"
         app:layout_constraintEnd_toEndOf="parent"
