--- a/app/src/main/res/layout/fragment_withdraw_create.xml
+++ b/app/src/main/res/layout/fragment_withdraw_create.xml
@@ -262,7 +262,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cards_recycler"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_8dp"
             android:layout_marginTop="18dp"
             android:layout_marginEnd="@dimen/margin_8dp"
