--- a/app/src/main/res/layout/item_accounts_card.xml
+++ b/app/src/main/res/layout/item_accounts_card.xml
@@ -21,13 +21,13 @@
         android:id="@+id/card_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="26dp"
         android:layout_marginBottom="26dp"
         android:text="@string/bank_card"
         android:textColor="@color/gray_intro_text"
         android:textSize="@dimen/text_20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/card_number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,11 +35,11 @@
         android:id="@+id/card_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_4dp"
         android:textColor="@color/gray_intro_text"
         android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="@+id/card_title"
+        app:layout_constraintEnd_toStartOf="@+id/card_icon"
         app:layout_constraintStart_toEndOf="@+id/card_title"
         app:layout_constraintTop_toTopOf="@+id/card_title"
         tools:text="**** 4567" />
@@ -48,7 +48,6 @@
         android:id="@+id/card_icon"
         android:layout_width="40dp"
         android:layout_height="28dp"
-        android:layout_marginStart="@dimen/margin_16dp"
         app:layout_constraintBottom_toBottomOf="@+id/card_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/card_number"
