--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -37,22 +37,22 @@
         android:layout_height="16dp"
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginTop="40dp"
-        android:src="@drawable/ic_yandex_mini"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_arrow" />
+        app:layout_constraintTop_toBottomOf="@+id/back_arrow"
+        tools:src="@drawable/ic_yandex_mini" />
 
     <TextView
         android:id="@+id/taxi_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
-        android:text="@string/yandex_title"
         android:textColor="@color/gray_intro_text"
         android:textSize="@dimen/text_24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/taxi_icon"
         app:layout_constraintStart_toEndOf="@+id/taxi_icon"
-        app:layout_constraintTop_toTopOf="@+id/taxi_icon" />
+        app:layout_constraintTop_toTopOf="@+id/taxi_icon"
+        tools:text="@string/yandex_title" />
 
     <ImageView
         android:id="@+id/circle_image"
