--- a/app/src/main/res/layout/fragment_auth_sign_up.xml
+++ b/app/src/main/res/layout/fragment_auth_sign_up.xml
@@ -79,8 +79,7 @@
         android:layout_marginStart="@dimen/margin_24dp"
         android:button="@drawable/checkbox_selector"
         android:checked="true"
-        android:padding="@dimen/margin_8dp"
-        app:layout_constraintEnd_toStartOf="@+id/agreement_text"
+        android:paddingEnd="@dimen/margin_16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/agreement_text" />
 
