--- a/app/src/main/res/layout/fragment_registration_selection.xml
+++ b/app/src/main/res/layout/fragment_registration_selection.xml
@@ -6,7 +6,6 @@
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -37,14 +36,14 @@
 
         <TextView
             android:id="@+id/registration_tv"
-            android:layout_width="354dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_24dp"
             android:layout_marginTop="38dp"
-            android:text="@string/select_aggregator"
+            android:text="@string/choose_aggregator"
             android:textColor="@color/gray_intro_text"
             android:textSize="@dimen/text_24sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/registration_title" />
 
