--- a/app/src/main/res/layout/fragment_withdraw_create.xml
+++ b/app/src/main/res/layout/fragment_withdraw_create.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/root_scroll_layout"
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/main_background"
@@ -14,7 +14,7 @@
         app:layout_constraintBottom_toTopOf="@+id/keyboard"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/parent_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -177,11 +177,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_24dp"
                     android:layout_marginTop="14dp"
-                    android:text="ПАО “Сбербанк”"
                     android:textColor="@color/withdraws_gray"
                     android:textSize="@dimen/text_16sp"
                     app:layout_constraintStart_toStartOf="@+id/background"
-                    app:layout_constraintTop_toTopOf="@+id/background" />
+                    app:layout_constraintTop_toTopOf="@+id/background"
+                    tools:text="ПАО “Сбербанк”" />
 
                 <TextView
                     android:id="@+id/order_tv"
@@ -189,11 +189,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_24dp"
                     android:layout_marginTop="6dp"
-                    android:text="Р/с 408190009938888837"
                     android:textColor="@color/withdraws_gray"
                     android:textSize="@dimen/text_16sp"
                     app:layout_constraintStart_toStartOf="@+id/background"
-                    app:layout_constraintTop_toBottomOf="@+id/bank_name_tv" />
+                    app:layout_constraintTop_toBottomOf="@+id/bank_name_tv"
+                    tools:text="Р/с 408190009938888837" />
 
                 <TextView
                     android:id="@+id/name_tv"
@@ -201,11 +201,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_24dp"
                     android:layout_marginTop="8dp"
-                    android:text="Поликин Г. И"
                     android:textColor="@color/gray_profile"
                     android:textSize="@dimen/text_13sp"
                     app:layout_constraintStart_toStartOf="@+id/background"
-                    app:layout_constraintTop_toBottomOf="@+id/order_tv" />
+                    app:layout_constraintTop_toBottomOf="@+id/order_tv"
+                    tools:text="Поликин Г. И" />
 
                 <ImageView
                     android:id="@+id/delete_icon"
