--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -20,15 +20,16 @@
         android:id="@+id/status_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingEnd="6dp"
         android:layout_marginStart="@dimen/margin_16dp"
+        android:layout_marginTop="@dimen/margin_4dp"
+        android:paddingEnd="6dp"
         app:layout_constraintStart_toEndOf="@+id/push_image"
         app:layout_constraintTop_toTopOf="@+id/push_image"
         tools:srcCompat="@drawable/ic_yellow_circle" />
 
     <TextView
         android:id="@+id/push_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/gray_intro_text"
@@ -40,11 +41,12 @@
 
     <TextView
         android:id="@+id/push_message"
-        android:layout_width="326dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_4dp"
         android:textColor="@color/withdraws_gray"
         android:textSize="@dimen/text_16sp"
+        app:layout_constraintEnd_toStartOf="@+id/chevron_image"
         app:layout_constraintStart_toStartOf="@+id/status_image"
         app:layout_constraintTop_toBottomOf="@+id/push_title"
         tools:text="С 16 октября водителям для доступа в сервис нужен будет рейтинг не менее 4,5" />
