--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -499,6 +499,7 @@
                     android:hint="@string/enter_card_number"
                     android:textColorHint="@color/gray_profile"
                     android:textSize="@dimen/text_13sp"
+                    app:errorTextAppearance="@style/ErrorAppearance"
                     app:layout_constraintEnd_toEndOf="@+id/new_card_background"
                     app:layout_constraintStart_toStartOf="@+id/new_card_background"
                     app:layout_constraintTop_toBottomOf="@+id/new_add_card_tv">
@@ -522,9 +523,10 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_4dp"
-                    android:layout_marginTop="@dimen/margin_24dp"
                     android:text="@string/new_card_message"
                     android:textColor="@color/gray_profile"
+                    android:fontFamily="sans-serif-medium"
+                    app:layout_constraintBottom_toBottomOf="@+id/new_card_background"
                     android:textSize="@dimen/text_13sp"
                     app:layout_constraintStart_toStartOf="@+id/card_input_view"
                     app:layout_constraintTop_toBottomOf="@+id/card_input_view" />
