--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -2,72 +2,55 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:background="@color/colorPrimary"
-        app:layout_constraintEnd_toEndOf="parent"
+    <ImageView
+        android:id="@+id/back_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:padding="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_back" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/back_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                android:padding="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_back" />
-
-            <TextView
-                android:id="@+id/reshoot_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:padding="@dimen/margin_16dp"
-                android:text="@string/reshoot"
-                android:textColor="@color/gray_intro_text"
-                android:textSize="@dimen/text_20sp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
-                app:layout_constraintEnd_toStartOf="@+id/reverse_camera"
-                app:layout_constraintTop_toTopOf="@+id/back_arrow"
-                tools:visibility="visible" />
-
-            <ImageView
-                android:id="@+id/reverse_camera"
-                android:layout_width="50dp"
-                android:layout_height="0dp"
-                android:padding="@dimen/margin_16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_reverse_camera" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.appcompat.widget.Toolbar>
+    <TextView
+        android:id="@+id/reshoot_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:padding="@dimen/margin_16dp"
+        android:text="@string/reshoot"
+        android:textColor="@color/gray_intro_text"
+        android:textSize="@dimen/text_16sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toStartOf="@+id/reverse_camera"
+        app:layout_constraintTop_toTopOf="@+id/back_arrow"
+        tools:visibility="visible" />
 
     <ImageView
-        android:id="@+id/takenImage"
+        android:id="@+id/reverse_camera"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="@dimen/margin_16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_reverse_camera" />
+
+    <ImageView
+        android:id="@+id/taken_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="@dimen/margin_32dp"
+        android:layout_marginTop="@dimen/margin_64dp"
+        android:layout_marginEnd="@dimen/margin_32dp"
+        android:layout_marginBottom="100dp"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextureView
         android:id="@+id/preview_view"
@@ -76,7 +59,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/background"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/bg_message"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/take_photo_btn" />
 
     <TextView
         android:id="@+id/folder"
@@ -85,7 +78,7 @@
         android:padding="@dimen/margin_16dp"
         android:text="@string/library"
         android:textColor="@color/gray_intro_text"
-        android:textSize="@dimen/text_20sp"
+        android:textSize="@dimen/text_16sp"
         app:layout_constraintBottom_toBottomOf="@+id/take_photo_btn"
         app:layout_constraintEnd_toStartOf="@+id/take_photo_btn"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,8 +99,8 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/margin_16dp"
         android:text="@string/done"
-        android:textColor="@color/gray_intro_text"
-        android:textSize="@dimen/text_20sp"
+        android:textColor="@color/yellow_color"
+        android:textSize="@dimen/text_16sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/take_photo_btn"
         app:layout_constraintEnd_toEndOf="parent"
