--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -23,32 +23,45 @@
             app:srcCompat="@drawable/ic_app_logo" />
 
         <TextView
-            android:id="@+id/app_name_title"
+            android:id="@+id/kassa_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/app_name"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/raleway"
+            android:text="@string/kassa"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="32sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="@dimen/text_24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/taxi_title"
+            app:layout_constraintStart_toStartOf="@+id/image_view"
             app:layout_constraintTop_toBottomOf="@+id/image_view" />
 
         <TextView
-            android:layout_width="280dp"
+            android:id="@+id/taxi_title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_16dp"
-            android:layout_marginBottom="102dp"
-            android:fontFamily="sans-serif"
-            android:text="@string/intro_message"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/raleway"
+            android:text="@string/taxi"
             android:textAlignment="center"
-            android:textColor="@color/gray_intro_text"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/text_24sp"
+            app:layout_constraintEnd_toEndOf="@+id/image_view"
+            app:layout_constraintStart_toEndOf="@+id/kassa_title"
+            app:layout_constraintTop_toBottomOf="@+id/image_view" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:text="@string/work_in_taxi"
+            android:textAlignment="center"
+            android:textColor="@color/registration_white_color"
             android:textSize="@dimen/text_16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/app_name_title" />
+            app:layout_constraintTop_toBottomOf="@+id/kassa_title" />
 
         <Button
             android:id="@+id/login_button"
