--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,7 +17,7 @@
             android:layout_width="76dp"
             android:layout_height="76dp"
             android:contentDescription="@string/app_name"
-            app:layout_constraintBottom_toTopOf="@+id/login_button"
+            app:layout_constraintBottom_toTopOf="@+id/signup_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -64,38 +65,51 @@
             app:layout_constraintTop_toBottomOf="@+id/kassa_title" />
 
         <Button
-            android:id="@+id/login_button"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginStart="@dimen/margin_24dp"
-            android:layout_marginEnd="@dimen/margin_24dp"
-            android:layout_marginBottom="@dimen/margin_24dp"
-            android:background="@drawable/bg_intro_btn"
-            android:fontFamily="sans-serif-medium"
-            android:text="@string/login_btn"
-            android:textAllCaps="false"
-            android:textColor="@color/continue_color"
-            android:textSize="@dimen/text_20sp"
-            app:layout_constraintBottom_toTopOf="@+id/signup_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <Button
             android:id="@+id/signup_button"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginStart="@dimen/margin_24dp"
             android:layout_marginEnd="@dimen/margin_24dp"
-            android:layout_marginBottom="46dp"
-            android:background="@drawable/bg_registration_btn"
+            android:layout_marginBottom="18dp"
+            android:background="@drawable/bg_intro_btn"
             android:fontFamily="sans-serif-medium"
             android:text="@string/registration"
             android:textAllCaps="false"
-            android:textColor="@color/white_code_text"
+            android:textColor="@color/colorPrimary"
             android:textSize="@dimen/text_20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/login_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginStart="@dimen/margin_24dp"
+            android:layout_marginEnd="@dimen/margin_24dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/bg_registration_btn"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/login_btn"
+            android:textAllCaps="false"
+            android:textColor="@color/registration_white_color"
+            android:textSize="@dimen/text_20sp"
+            app:layout_constraintBottom_toTopOf="@+id/intro_registration_message"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/intro_registration_message"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_24dp"
+            android:gravity="center"
+            android:textColor="@color/registration_white_color"
+            android:textSize="@dimen/text_13sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="@string/intro_registration_message" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
